margin overlapping padding fix

--- a/src/styles/ShareExtra.module.css
+++ b/src/styles/ShareExtra.module.css
@@ -24,7 +24,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
 }
 
 .shareTitle {
@@ -46,6 +45,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  padding-bottom: 5rem;
 }
 
 .shareImage {
@@ -172,6 +172,7 @@
 
   .shareImageContainer {
     position: relative;
+    padding-bottom: 0;
   }
 
   .shareImage {
@@ -224,6 +225,7 @@
 
   .shareImageContainer {
     position: relative;
+    padding-bottom: 0;
   }
 
   .shareImage {
